--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,12 @@
     left: 12rem;
     width: 80%;
 }
-
+.icon-margin {
+    margin: 0 10px 0;
+}
+.bg-gradient {
+    background-color: linear-gradient(to right, red, orange, pink);
+}
 /* -----------HEADER----------- */
 #header {
     position: relative;
@@ -30,7 +35,7 @@
     position: fixed;
     width: 100%;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 1);
     border-bottom: 1px solid black;
     z-index: 100;
     opacity: 1;
@@ -48,7 +53,7 @@
     height: 10px;
 }
 #header .navbar-login a:hover {
-    color: rgb(0, 255, 13);
+    color: rgb(255, 0, 140);
     width: 100px;
 }
 #header .nav-item .nav-link {
@@ -59,7 +64,7 @@
     color: rgb(255, 0, 140);
 }
 .nav-item .dropdown-menu {
-    margin-top: 13px;
+    margin-top: 15px;
 }
 .nav-item .dropdown-menu .dropdown-item {
     font-size: 15px;
@@ -72,6 +77,7 @@
     width: 100%;
     color: rgb(255, 0, 140);
 }
+
 /* -----------BODY-----------*/
 #body {
     display: flex;
@@ -93,11 +99,13 @@
     left: 5rem;
     color: white;
     padding: 30px;
+    border-radius: 20px;
 }
 
 #body .box-input {
     width: 350px;
     height: 50px;
+    background: white;
 }
 #body .body-right {
     width: 50%;
@@ -109,13 +117,13 @@
 .button-signup {
     padding: 5px 15px;
     margin-top: 20px;
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
 }
 .button-signup:hover {
     background-color: rgb(0, 0, 0);
-    color: rgb(123, 255, 0);
+    color: rgb(255, 255, 255);
     border-radius: 20px;
 }
 /* -----------CONTENT----------- */
@@ -167,7 +175,7 @@
     top: 34rem;
 }
 #Gioi-thieu .Gioi-thieu-content h2 {
-    border-bottom: 2px solid;
+    border-bottom: 2px solid #ffc107;
     height: 7rem;
     color: white;
     font-size: 38px;
@@ -176,11 +184,35 @@
     height: 7rem;
     color: white;
     font-size: 20px;
-    text-align: inherit;
+    text-align: justify;
 }
 #Gioi-thieu .Gioi-thieu-select {
     color: white;
     font-size: 25px;
     display: flex;
     justify-content: space-evenly;
+}
+/* -----------FOOTER----------- */
+#footer {
+    position: absolute;
+    display: flex;
+    top: 226rem;
+    height: 18rem;
+    left: 5rem;
+}
+#footer .footer-content {
+    display: grid;
+}
+#footer .footer-content a {
+    margin-top: 7px;
+    width: max-content;
+}
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(transparent, #00a6ff, #0a74ad, #0b4260, #0a2431);
+    border-radius: 2rem;
 }
